[package]
name = "radicle-items"
version = "0.1.0"
authors = ["Massimiliano Mantione <massimiliano.mantione@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = {version = "1.0.106", features = ["derive"]}
serde_json = "1.0.51"
uuid = { version = "0.8", features = ["serde", "v4"] }